# ParallelX

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TUNING.md
examples/data/: sample.txt  wordcount_out.json
examples/scripts/: generate_sample_text.py
examples/workflows/: csv_aggregate.json  montecarlo_pi.json  wordcount.json
parallelx/: __init__.py  cli.py  engine.py  loader.py  tasks.py  tests_support.py  types.py  utils.py  workflow.py
tests/: test_engine.py  test_loader.py
